--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -23,10 +23,16 @@
 
     @media (min-width: 769px) and (max-width: 1125px)  {
       margin-left: 60px;
+      // margin: 0;
     }
 
-    @media (max-width: 768px)  {
-      width: 80%;
+    @media (min-width:501px) and (max-width: 768px)  {
+      width: 85%;
+      margin: 0 auto;
+    }
+
+    @media (max-width: 500px)  {
+      width: 90%;
       margin: 0 auto;
     }
 
@@ -61,50 +67,47 @@
 
     @media (max-width: 768px)  {
       display: none;
-      // width: 50%;
-      // min-height: 200px;
-      // overflow: hidden;
-      // margin-bottom: 20px;
     }
-  }
 
-  .image-wrap {
-    width: 100%;
-    height: auto;
-    position: relative;
-
-    .image {
+    .image-wrap {
       width: 100%;
       height: auto;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 1;
-
-      @media (min-width: 767px) and (max-width: 1125px)  {
-        top: 20px;
+      position: relative;
+  
+      .image {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 1;
+  
+        @media (min-width: 767px) and (max-width: 1125px)  {
+          top: 20px;
+        }
+  
+        // @media (max-width: 768px)  {
+        //   top: 5px;
+        // }
       }
-
-      // @media (max-width: 768px)  {
-      //   top: 5px;
-      // }
-    }
-
-    .image-one {
-      top: 5px;
-      left: 5px;
-      opacity: 1;
-
-      @media (min-width: 767px) and (max-width: 1125px)  {
-        top: 25px;
+  
+      .image-one {
+        top: 5px;
+        left: 5px;
+        opacity: 1;
+  
+        @media (min-width: 767px) and (max-width: 1125px)  {
+          top: 25px;
+        }
+  
+        // @media (max-width: 768px)  {
+        //   top: 0;
+        //   left: 5px;
+        // }
       }
-
-      // @media (max-width: 768px)  {
-      //   top: 0;
-      //   left: 5px;
-      // }
     }
   }
+
 }
 
 .portfolio {
@@ -123,7 +126,6 @@
       margin: 40px auto;
       display: flex;
       flex-direction: row;
-
     }
 
     @media (max-width: 700px) {
@@ -146,7 +148,7 @@
 
       @media (max-width: 700px) {
         position: static;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
       }
 
@@ -168,17 +170,17 @@
         position: static;
         background: transparent;
         opacity: 1;
-        width: 44%;
+        width: 49%;
         color: $black;
-        padding: 20px;
+        padding: 0 20px;
       }
-
+      
       @media (max-width: 700px) {
         position: static;
         background: transparent;
         opacity: 1;
         color: $black;
-        padding: 30px;
+        padding: 20px 0;
       }
 
       .category {
@@ -263,7 +265,9 @@
   }
 
   .project-wrap:first-of-type {
-    margin-top: 70px;
+    @media (max-width: 768px) {
+      margin-top: 0;
+    }
   }
   .project-wrap:last-of-type {
     margin-bottom: 70px;
